updated landing page updated dictionary and guide bg fixed the background and element light/dark mode desyncing other minor fixes

--- a/index.css
+++ b/index.css
@@ -8,6 +8,14 @@ p{
     font-family: "Poppins", sans-serif;
 }
 
+a {
+    font-family: inherit;
+}
+
+hi {
+    font-family: inherit;
+}
+
 button {
     font-family: "Montserrat", sans-serif;
 }
