--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,7 @@
     --preloader: rgb(255, 255, 255); /* preloader background color */
 
     --loadingtxt: rgb(204, 204, 204);
+    --landing-bg: url("images/BANNER_BG_light.webp");
 
     transition: all 0.3s ease;
 }  
@@ -57,6 +58,7 @@
     --preloader: rgb(26, 26, 26); /* preloader background color */
 
     --loadingtxt: rgb(51, 51, 51);
+    --landing-bg: url("images/BANNER_BG.webp");
 
     transition: all 0.3s ease;
 }
@@ -134,6 +136,10 @@ div {
 
 body {
     background-color: var(--bg);
+    background-image: var(--landing-bg);
+    background-position: top;
+    background-size: 100vw;
+    background-repeat: no-repeat;
 }
 
 #mainstuff {
@@ -160,15 +166,6 @@ header {
 .ptlogo {
     height: 30%;
     width: 30%;
-}
-
-#bglogo {
-    opacity: 0.5;
-    width: 50%;
-    position: fixed;
-    z-index: -1;
-    bottom: 0px;
-    left: 0px;
 }
 
 #theButton {
@@ -280,7 +277,6 @@ video {
 
 a {
     color: var(--anchorcolor);
-    font-style: italic;
 }
 .italic {
     font-style: italic;
